Fix proxy support, FX thread freeze, IDP failure notifications
- OidcTrustStoreManager: proxy-aware fetchCertificateChain() tunnels
  through HTTPS proxy via HTTP CONNECT when https.proxyHost is set;
  falls back to ProxySelector. Added lastConnectionError tracking.
- AuthenticationService: show Alert dialog on FX thread when IDP
  connection fails at startup, with actionable error message.
- CredentialsManagementController: run refreshCertificates() in
  background thread to avoid FX thread deadlock; show IDP error
  details in certificate dialog.
- SimpleAuthenticationOauthToken: cache HttpClient singleton to
  avoid thread pool leak on Java 21 (AutoCloseable); explicitly
  set ProxySelector.getDefault() for proxy support.
- Oauth2HttpApplicationServer: replace deprecated new URL() with
  URI.create().toURL() for Java 21 compatibility.